# vowed-velvet-starship-transpose

./: README.md
c_caller/: .gitignore  BUILD  Makefile  build-and-run.sh
c_caller/inc/: rust_api.h
c_caller/src/: main.c
rust/: BENCHMARKS.md  Cargo.toml  build.rs  build.sh
rust/benches/: matrices.rs  polynomials.rs
rust/examples/: symbolic_execution.rs
rust/src/: complex.rs  lib.rs  matrix.rs  polynomial.rs
rust/src/ffi/: complex.rs  matrix.rs  mod.rs  polynomial.rs
rust_lib/: Cargo.toml  build.sh
rust_lib/src/: complex.rs  ffi.rs  matrix.rs  polynomial.rs
rust_lib/src/ffi/: complex.rs  polynomial.rs
