[package]
name = "complex_polynomials_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "libcomplex_polynomials"
crate_type = ["staticlib", "dylib", "rlib"]

[features]
default = ["parse"]
parse = []

[dependencies]
rand = "0.8.5"
regex = "1.7.0"

[dev-dependencies]
once_cell = "1.16.0"
