[package]
name = "complex_polynomials_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "libcomplex_polynomials"
crate_type = ["staticlib", "dylib", "rlib"]

[features]
default = ["parse", "simd"]
parse = ["regex"]
simd = []

[dependencies]
rand = "0.8.5"
regex = { version = "1.7.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"
once_cell = "1.16.0"

[[bench]]
name = "matrices"
harness = false

[[bench]]
name = "polynomials"
harness = false
